# ossify-cogents

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: architecture.md  cli.md  core.md  git.md  python_style.md  targets.md  tests.md  unit_tests.md  utils.md
openspec/changes/archive/2026-07-08-init-project-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-init-project-skeleton/specs/cli-version/: spec.md
openspec/changes/archive/2026-07-08-init-project-skeleton/specs/project-skeleton/: spec.md
openspec/changes/archive/2026-07-17-add-cogent-skill-registry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-cogent-skill-registry/specs/config-persistence/: spec.md
openspec/changes/archive/2026-07-17-add-cogent-skill-registry/specs/config-verify/: spec.md
openspec/changes/archive/2026-07-17-add-cogent-skill-registry/specs/skill-registry/: spec.md
openspec/changes/archive/2026-07-19-add-skill-discovery/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-19-add-skill-discovery/specs/config-verify/: spec.md
openspec/changes/archive/2026-07-19-add-skill-discovery/specs/skill-discovery/: spec.md
openspec/changes/archive/2026-07-19-add-skill-discovery/specs/skill-registry/: spec.md
openspec/specs/cli-version/: spec.md
openspec/specs/config-persistence/: spec.md
openspec/specs/config-verify/: spec.md
openspec/specs/project-skeleton/: spec.md
openspec/specs/skill-discovery/: spec.md
openspec/specs/skill-registry/: spec.md
schema/: v1.json
scripts/: generate_schema.py
src/: container.py
src/adapters/: __init__.py  ossify_config_adapter.py  skill_registry_adapter.py  workspace_adapter.py
src/adapters/persistence/: __init__.py
src/adapters/sources/: __init__.py
src/adapters/targets/: __init__.py
src/application/: __init__.py  _get_version.py  _registry_service.py  _verify_config.py
src/application/services/: __init__.py  _discovery_resolver.py  _registry_validator.py  _source_inference_service.py
src/cli/: __init__.py  _app.py  _config.py  _registry.py  _workspace.py
src/domain/: __init__.py  _builtins.py  config_model.py  discovery.py  errors.py  models.py  ossify_config.py  skill_registry.py
src/ossify/cli/: app.py
src/ports_in/: __init__.py  _ossify_config.py  _registry.py  _version.py
src/ports_out/: __init__.py  _config_repository.py  _registry_repository.py  _workspace_locator.py
src/tui/: __init__.py
tests/cli/: test_architecture.py
tests/e2e/: test_ossify_version_flow.py  test_registry_flow.py
tests/unit/adapters/: test_ossify_config_adapter.py  test_skill_registry_adapter.py  test_workspace_adapter.py
tests/unit/application/: test_get_version.py  test_registry_service.py  test_verify_config.py
tests/unit/application/services/: test_discovery_resolver.py  test_registry_validator.py  test_source_inference_service.py
tests/unit/domain/: test_config_model.py  test_discovery.py  test_ossify_config.py  test_skill_registry.py
