[project]
name = "ossify"
version = "0.1.0"
description = "Package manager for AI coding-assistant skills, agents, and configuration (Claude Code, GitHub Copilot, and more)"
readme = "README.md"
authors = [
    { name = "Valentine Zhuck", email = "Valentine_Zhuck@epam.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
ossify = "ossify.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern is `param: T = typer.Option(...)` / `typer.Argument(...)`
# as the default value itself — bugbear's "no function calls in defaults" doesn't apply.
"src/ossify/cli/commands/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
